--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -15,23 +15,13 @@
 
 <body>
 
-    Order Summary
+    <main role="main">
+        {% block content %}
+        {% include "card-comp.jinja2" %}
+        {% endblock %}
+    </main>
 
-    You can now listen to millions of songs, audiobooks, and podcasts on any
-    device anywhere you like!
-
-    Annual Plan
-    $59.99/year
-
-    Change
-
-    Proceed to Payment
-    Cancel Order
-
-    <div class="attribution">
-        Challenge by <a href="{{ challenge_link }}" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="{{ gh_profile }}">{{ gh_username }}</a>.
-    </div>
+    {% include "footer.jinja2" %}
 </body>
 
 </html>
