structure card component

--- a/templates/card-comp.jinja2
+++ b/templates/card-comp.jinja2
@@ -1,14 +1,24 @@
-<section>
-    Order Summary
+<section class="card">
+    <h1 class="card__title">Order Summary</h1>
 
-    You can now listen to millions of songs, audiobooks, and podcasts on any
-    device anywhere you like!
+    <div class="card__content">
+        <p class="card__text">
+            You can now listen to millions of songs, audiobooks, and podcasts on any
+            device anywhere you like!
+        </p>
 
-    Annual Plan
-    $59.99/year
+        <form class="card__plan">
+            <div class="card__plan-container">
+                <span class="card__plan-name">Annual Plan</span>
+                <span class="card__plan-price">$59.99/year</span>
 
-    Change
+                <button class="card__button-change-plan" type="button">Change</button>
+            </div>
 
-    Proceed to Payment
-    Cancel Order
+            <div class="card__button-container">
+                <button class="card__button-proceed-plan" type="button">Proceed to Payment</button>
+                <button class="card__button-cancel-plan" type="button">Cancel Order</button>
+            </div>
+        </form>
+    </div>
 </section>
