--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,1 +1,14 @@
 * {font-family: 'Red Hat Display', sans-serif;}
+
+body {
+    background-color: rgba(224, 232, 255, 255);
+    background-image: url(../images/pattern-background-mobile.svg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+@media only screen and (min-width: 375px) {
+    body {
+        background-image: url(../images/pattern-background-desktop.svg);
+    }
+}
