--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,13 +1,15 @@
 * {font-family: 'Red Hat Display', sans-serif;}
 
 body {
+    color: rgba(31, 47, 86, 255);
+
     background-color: rgba(224, 232, 255, 255);
     background-image: url(../images/pattern-background-mobile.svg);
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
 
-@media only screen and (min-width: 375px) {
+@media only screen and (min-width: 430px) {
     body {
         background-image: url(../images/pattern-background-desktop.svg);
     }
