add illustration img for card component

--- a/templates/card-comp.jinja2
+++ b/templates/card-comp.jinja2
@@ -1,4 +1,5 @@
 <section class="card">
+    <img class="card__illustration" alt="Illustration people dancing hearing music" src="../static/images/illustration-hero.svg" width="240" height="260"/>
     <h1 class="card__title">Order Summary</h1>
 
     <div class="card__content">
