add icon for plan

--- a/templates/card-comp.jinja2
+++ b/templates/card-comp.jinja2
@@ -10,6 +10,9 @@
 
         <form class="card__plan">
             <div class="card__plan-container">
+                <span class="card__plan-icon-container">
+                    <img class="card__plan-icon" alt="Plan icon" src="../static/images/icon-music.svg" width="50" height="50" />
+                </span>
                 <span class="card__plan-name">Annual Plan</span>
                 <span class="card__plan-price">$59.99/year</span>
 
