link to css file contain the card styling

--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="../static/images/favicon-32x32.png">
     <link rel="stylesheet" type="text/css" href="../static/css/index.css">
     <link rel="stylesheet" type="text/css" href="../static/css/attribution.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/card-comp.css"/>
 </head>
 
 <body>
