--- a/static/sass/card-comp.scss
+++ b/static/sass/card-comp.scss
@@ -24,7 +24,7 @@ $c: card;
     &__title {
         margin: 10px auto;
         font-weight: $ultraBold;
-        font-size: 1.8em;
+        font-size: 1.8rem;
     }
 
     &__content {
@@ -34,7 +34,7 @@ $c: card;
             color: $desaturatedBlue;
 
             font-weight: $regular;
-            font-size: 1em;
+            font-size: 1rem;
 
             margin: 8px auto;
         }
