change plan details structure

--- a/templates/card-comp.jinja2
+++ b/templates/card-comp.jinja2
@@ -1,5 +1,5 @@
 <section class="card">
-    <img class="card__illustration" alt="Illustration people dancing hearing music" src="../static/images/illustration-hero.svg" width="240" height="260"/>
+    <img class="card__illustration" alt="Illustration people dancing hearing music" src="../static/images/illustration-hero.svg" width="240" height="260" />
     <h1 class="card__title">Order Summary</h1>
 
     <div class="card__content">
@@ -13,10 +13,15 @@
                 <span class="card__plan-icon-container">
                     <img class="card__plan-icon" alt="Plan icon" src="../static/images/icon-music.svg" width="50" height="50" />
                 </span>
-                <span class="card__plan-name">Annual Plan</span>
-                <span class="card__plan-price">$59.99/year</span>
 
-                <button class="card__button-change-plan" type="button">Change</button>
+                <span class="card__plan-name-price-container">
+                    <span class="card__plan-name">Annual Plan</span>
+                    <span class="card__plan-price">$59.99/year</span>
+                </span>
+
+                <span class="card__plan-button-container">
+                    <button class="card__button-change-plan" type="button">Change</button>
+                </span>
             </div>
 
             <div class="card__button-container">
